--- a/_layouts/navigation.html
+++ b/_layouts/navigation.html
@@ -90,13 +90,6 @@ layout: base
                     <button class="usa-accordion-button usa-nav-link" aria-expanded="false" aria-controls="megamenu-2">
                         <span>Collaboration Partners</span>
                     </button>
-                    <ul class="usa-nav-submenu usa-megamenu usa-grid-full" id="megamenu-2">
-                        <li class="usa-megamenu-col">
-                            <ul>
-
-                            </ul>
-                        </li>
-                    </ul>
                 </li>
                 <li>
                     <a class= "usa-nav-link" href="{{ site.baseurl }}/data/">
@@ -124,7 +117,20 @@ layout: base
                     </li>
                     {% endfor %}
                 </ul>
-                {% include searchgov/form.html searchgov=site.searchgov %}
+            </div>
+            <div class="usa-nav-secondary">
+                <form class="usa-search usa-search-small" action="https://search.usa.gov/search" accept-charset="UTF-8"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /></div>
+                    <div role="search">
+                        <label class="usa-sr-only" for="search-field-small">Search small</label>
+                        <input id="affiliate" name="affiliate" type="hidden" value="performance.gov" />
+                        <input id="search-field-small" type="search" name="query" autocomplete="off" class="usagov-search-autocomplete" id="query" name="query" type="text" >
+                        <button type="submit">
+                            <span class="usa-sr-only">Search</span>
+                        </button>
+                    </div>
+                </form>
+                </li>
+                </ul>
             </div>
         </div>
     </nav></header>
